--- a/impl/CMakeLists.txt
+++ b/impl/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(dij Dijkstra.cpp d_main.cpp)
+add_executable(dij Dijkstra.cpp)
 link_directories(${OpenCV_LIBRARY_DIRS})
 target_link_libraries(dij ${OpenCV_LIBS})
