--- a/impl/CMakeLists.txt
+++ b/impl/CMakeLists.txt
@@ -1,3 +1,7 @@
-add_executable(dij Dijkstra.cpp)
+add_executable(mydijkstra Dijkstra.cpp)
 link_directories(${OpenCV_LIBRARY_DIRS})
-target_link_libraries(dij ${OpenCV_LIBS})
+target_link_libraries(mydijkstra ${OpenCV_LIBS})
+
+
+add_executable(myastar AStar.cpp)
+target_link_libraries(myastar ${OpenCV_LIBS})
